--- a/package.json
+++ b/package.json
@@ -49,7 +49,10 @@
     "prettier"
   ],
   "dependencies": {
+    "axios": "^0.21.1",
+    "axios-rate-limit": "^1.3.0",
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "cross-env": "^7.0.0",
